--- a/templates/registration/Profile.html
+++ b/templates/registration/Profile.html
@@ -16,9 +16,13 @@
                     <div class="d-flex flex-column align-items-center text-center p-3 py-5">
                         <img alt="" class="rounded-circle mt-5" width="150px"
                              src="https://st3.depositphotos.com/15648834/17930/v/600/depositphotos_179308454-stock-illustration-unknown-person-silhouette-glasses-profile.jpg">
-                        <span class="text-white-50 mt-2">{{ request.user.email }}</span><span> </span>
+                        <span class="text-white-50 mt-2">{{ request.user.email }}</span>
+                        <a class="btn btn-primary profile-button w-100 standard-button" href="{% url 'history' %}">
+                            History of Payments
+                        </a>
                     </div>
                 </div>
+
                 <div class="col-md-9 border-right">
                     <div class="p-3 py-5">
                         <div class="d-flex justify-content-between align-items-center mb-3">
