--- a/templates/purchase/PurchasedItem.html
+++ b/templates/purchase/PurchasedItem.html
@@ -1,4 +1,4 @@
-<div class="d-flex flex-row justify-content-between align-items-center p-2 box mt-4 px-3">
+<div class="d-flex flex-row justify-content-between align-items-center p-2 px-3">
     <div class="mr-1 col-2">
         <img class="rounded" src="{{ purchase.product.image.url }}" width="70" alt="">
     </div>
